[gd_scene load_steps=6 format=3 uid="uid://bh7gm3nb88gam"]

[ext_resource type="Script" path="res://melee_enemy_class.gd" id="1_kggck"]
[ext_resource type="Texture2D" uid="uid://6m2wu17vloxj" path="res://icon.svg" id="2_sxcxu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d0l6v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sxcxu")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykafx"]
size = Vector2(129, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on8u4"]
size = Vector2(129, 129)

[node name="Enemy_3" type="CharacterBody2D"]
script = ExtResource("1_kggck")
SPEED = 200.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_d0l6v")
animation = &"roll"
speed_scale = 2.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ykafx")

[node name="Painbox" type="Area2D" parent="."]

[node name="Killbox" type="CollisionShape2D" parent="Painbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_on8u4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 150.0
neighbor_distance = 300.0
avoidance_layers = 3
avoidance_mask = 3
debug_enabled = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Painbox" to="." method="_on_painbox_area_entered"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
